[gd_scene load_steps=3 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Settings_Menu.gd" type="Script" id=2]

[node name="Popup" type="Popup"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.235294, 0.235294, 0.235294, 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
mouse_filter = 0
custom_constants/vseparation = 30
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 390.0
margin_bottom = 41.0
mouse_filter = 0
size_flags_horizontal = 3
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="GridContainer"]
margin_left = 394.0
margin_right = 784.0
margin_bottom = 41.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.3
max_value = 1.7
step = 0.01
value = 1.0

[node name="Label5" type="Label" parent="GridContainer"]
margin_top = 71.0
margin_right = 390.0
margin_bottom = 112.0
text = "Contrast"

[node name="ContrastSlider" type="HSlider" parent="GridContainer"]
margin_left = 394.0
margin_top = 71.0
margin_right = 784.0
margin_bottom = 112.0
focus_mode = 1
size_flags_vertical = 1
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 142.0
margin_right = 390.0
margin_bottom = 183.0
size_flags_horizontal = 3
text = "Master Sound"

[node name="MasterSlider" type="HSlider" parent="GridContainer"]
margin_left = 394.0
margin_top = 142.0
margin_right = 784.0
margin_bottom = 183.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 50.0

[node name="Label4" type="Label" parent="GridContainer"]
margin_top = 213.0
margin_right = 390.0
margin_bottom = 254.0
text = "Background Music"

[node name="MusicSlider" type="HSlider" parent="GridContainer"]
margin_left = 394.0
margin_top = 213.0
margin_right = 784.0
margin_bottom = 254.0
focus_mode = 1
size_flags_vertical = 1
min_value = -50.0
max_value = 50.0

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 284.0
margin_right = 390.0
margin_bottom = 325.0
size_flags_horizontal = 3
text = "Effect Sound"

[node name="EffectSlider" type="HSlider" parent="GridContainer"]
margin_left = 394.0
margin_top = 284.0
margin_right = 784.0
margin_bottom = 325.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 50.0

[node name="Button" type="Button" parent="."]
margin_left = 19.0
margin_top = 21.0
margin_right = 49.0
margin_bottom = 68.0
text = "X"

[connection signal="popup_hide" from="." to="." method="_on_Popup_popup_hide"]
[connection signal="mouse_exited" from="GridContainer/BrightnessSlider" to="." method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="GridContainer/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/ContrastSlider" to="." method="_on_ContrastSlider_value_changed"]
[connection signal="mouse_exited" from="GridContainer/MasterSlider" to="." method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="GridContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="mouse_exited" from="GridContainer/EffectSlider" to="." method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="GridContainer/EffectSlider" to="." method="_on_EffectSlider_value_changed"]
[connection signal="pressed" from="Button" to="." method="hide"]
